...
          />
          <Stack.Screen
            name="pages/[id]"
            options={{
              headerShown: true,
              headerTitle: 'Page Detail',
              headerBackTitle: 'Back',
            }}
          />
          <Stack.Screen
            name="pages/edit/[id]"
            options={{
              headerShown: true,
...
            }}
          />
          <Stack.Screen
            name="plugins/[id]"
            options={{
              headerShown: true,
              headerTitle: 'Plugin Settings',
              headerBackTitle: 'Back',
            }}
          />
        </Stack>
      </ServerContext.Provider>
    </QueryClientProvider>
...
