...
        },
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          title: 'Dashboard',
          headerLargeTitle: true,
          tabBarIcon: ({ color, size }) => <Home size={size} color={color} />,
        }}
      />
      <Tabs.Screen
        name="pages"
...
          tabBarIcon: ({ color, size }) => <Calendar size={size} color={color} />,
        }}
      />
      <Tabs.Screen
        name="integrations"
        options={{
          title: 'Integrations',
          headerLargeTitle: true,
          tabBarIcon: ({ color, size }) => <Puzzle size={size} color={color} />,
        }}
      />
      <Tabs.Screen
        name="settings"
...
